--- a/style.css
+++ b/style.css
@@ -119,10 +119,12 @@ header, .nav-menu {
 }
 
 .menu-responsive {
+    padding: 0 20px;
     height: 160px;
     width: 100%;
     position: absolute;
     top: 0;
+    right: 20px;
     transform: translateY(-190px); 
     transition: 0.5s ease-in;
 }
@@ -347,7 +349,8 @@ footer {
 
 .menu-desplegado {
     justify-content: space-between;
-    transition: 0.5s;
+    height: 200px;
+    transition: translate 1s;
 }
 
 .abierto {
