--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ h2 {
 
 .imagen-presentacion, .proyecto-imagen {
     width: 100%;
-    height: auto;
+    height: 122px;
 }
 
 .conocimientos-bloque, .cita-contenido, footer {
