--- a/style.css
+++ b/style.css
@@ -49,9 +49,9 @@ h2 {
     margin-bottom: 20px;
 }
 
-.imagen-presentacion, .proyecto-imagen {
+.imagen-presentacion {
     width: 100%;
-    height: 122px;
+    height: auto;
 }
 
 .conocimientos-bloque, .cita-contenido, footer {
@@ -253,6 +253,8 @@ h3 {
 
 .proyecto-imagen {
     display: block;
+    width: 100%;
+    height: 122px;
     border-radius: 8px;
 }
 
