--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
-
 * {
     box-sizing: border-box;
 }
@@ -15,6 +14,7 @@ body {
 }
 
 /*Unifico estilos que se repiten a lo largo del c'odigo*/
+
 ul {
     padding: 0;
     list-style: none;
@@ -36,7 +36,7 @@ section, main {
     justify-content: center;
     text-align: center;
     padding: 110px 40px;
-} 
+}
 
 h2 {
     font-size: 45px;
@@ -62,6 +62,7 @@ h2 {
 }
 
 /*Unifico colores que se repiten a lo largo del c'odigo*/
+
 header, footer {
     background-color: #C48A69;
 }
@@ -79,6 +80,7 @@ a, .button, .cita, footer {
 }
 
 /*Unifico estilado de font que se repiten a lo largo del c'odigo*/
+
 h1, h2, .conocimiento-nombre {
     font-family: 'Rubik', sans-serif;
 }
@@ -88,6 +90,7 @@ h1, .saludo, .resaltado-presentacion, .conocimiento-nombre, .proyecto-nombre {
 }
 
 /*Comienza header*/
+
 header {
     padding: 25px 100px;
     box-shadow: 0 0 29px 0 rgba(196, 138, 105, 0.25);
@@ -124,7 +127,7 @@ header, .nav-menu {
     width: 100%;
     position: absolute;
     right: 20px;
-    transform: translateY(-190px); 
+    transform: translateY(-190px);
     transition: 1s;
 }
 
@@ -132,14 +135,14 @@ header, .nav-menu {
     display: none;
 }
 
-/*Fin header - comienza secci'on presentaci'on*/  
+/*Fin header - comienza secci'on presentaci'on*/
+
 .contenido-principal {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
 }
-
 
 .presentacion {
     display: flex;
@@ -179,6 +182,7 @@ h1 {
 }
 
 /*Fin secci'on presentaci'on - Comienzo Secci'on Habilidades*/
+
 .conocimientos-descripcion {
     max-width: 350px;
 }
@@ -203,6 +207,7 @@ h1 {
 }
 
 /*Fin secci'on habilidades - Comienzo secci'on cita*/
+
 .seccion-cita {
     background-color: #C86733;
 }
@@ -211,6 +216,7 @@ h1 {
     font-size: 23px;
     margin: 10px 40px;
     max-width: 700px;
+    line-height: 1.6;
 }
 
 h3 {
@@ -263,12 +269,15 @@ h3 {
 }
 
 /*Fin secci'on proyectos - Comienzo footer*/
+
 footer {
     padding: 80px 20px 60px;
 }
+
 .footer-nav-menu, .footer-social {
     display: flex;
 }
+
 .footer-nav-menu {
     margin: 0;
 }
@@ -282,23 +291,21 @@ footer {
 }
 
 /*Comienzo 'ordenes para responsive design*/
+
 @media (max-width:900px) {
     .contenido-principal {
         flex-direction: column;
     }
-
     .presentacion {
         align-items: center;
         width: 100%;
         max-width: 500px;
         margin-bottom: 30px;
     }
-
     .proyecto-item {
         width: 45%;
     }
 }
-
 
 @media (max-width:650px) and (min-width:500px) {
     .conocimientos-item {
@@ -314,32 +321,26 @@ footer {
         height: 100px;
         transition: 1s;
     }
-
     .nav-menu, .nav-footer {
         display: none;
     }
-
     .menu-hamburguesa {
         display: block;
         font-size: 20px;
         position: absolute;
         right: 20px;
     }
-    
     .menu-header.responsive {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-    }    
-
-    .menu-header.responsive > li:last-child {
+    }
+    .menu-header.responsive>li:last-child {
         margin: 0;
     }
-
     main, section {
         padding: 100px 10px;
     }
-
     .proyecto-item {
         width: 100%;
     }
@@ -351,13 +352,13 @@ footer {
         padding: 10px 5px;
         margin: 5px;
     }
-
     .conocimiento-nombre {
         margin: 3px;
     }
 }
 
 /*Comienzo clases especiales*/
+
 .hidden {
     display: none;
 }
